# inverse-covariance-weighted-index

./: README.md  icw.py  pyproject.toml  requirements.txt
icw/: __init__.py  icw.py
tests/: 1_generate_test_data.py  2_compare_to_swindex.py  3_tests.py
